JDK8 fix